--- a/index.html
+++ b/index.html
@@ -13,20 +13,32 @@ title: Personal Resume
 <body>            
 	<div id="intro">
 		<ul>
-		<li>Tonya A. Riepe</li>		
-		<li>USA, America 12345</li>
-		<li>123.456.7890</li>
+		<li>Tonya A. Riepe</li>	
 		<li>tonya.riepe@gmail.com</li>
 		</ul>
 	</div>
 	<div id="resume-content">
-<h2>Job Objective:</h2> 
-<p>To gain an entry level position in software support</p>
+<h2>Objective:</h2> 
+<p>To gain an entry level position in software development, utilizing my professional skills & education. 
+	To grow professionally while contributing to your efficiency and success.</p>
 
 <h2>Summary of Qualifications</h2>
-<p>I have a not only a unique ability, but a passion to understand new software and how it works and how users can interact with it. I have used this job skill in the past to write up training manuals and offer training to not only new employees, but also existing employees in all of my past positions.
+<p>I have a passionate ability to understand new software and how it works, and how users can effectively interact with it.
+	I have used this job skill in the past to develop training manuals and offer training to new & existing employees, 
+	even when not part of my official job description.
+	I am now completing my education to ensure that software development is my primary occupational focus.
 </p>
 <h1>WORK HISTORY</h1>
+		<h3>Senior Web Developer</h3>
+<p class="job-title">Februrary 2016-Present</p>
+<ul>
+<li>Update legacy code in existing ASP.NET applications using C#, HTML, CSS, Javascript, and SQL</li>
+<li>Maintain County website and update any verbiage or documentation as needed</li>
+<li>Deployed applications on multiple services and updated spooling as needed</li>
+<li>Wrote SQL scripts for quering and deleting records in active deployment</li>
+<li>Worked with clients on new web pages to customize while keeping with current county standards</li>
+<li>Rewote multiiple applications with custom user controls so they had consistancy and better user interface</li>
+<ul>
 <h3>Account Specialist</h3>
 <p class="job-title">DJA Financial Aid Services, Wichita, KS September 2011-Present</p>
 <ul>
