Fixed list layout

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 layout: default
 title: Personal Resume
 ---
-<DOCTYPE html>
+<!--<DOCTYPE html>
 
 
 <html>
 <head>
 <title> Resume Page </title>
 <link rel="stylesheet" type="text/css" href="css/mystyle.css">
-</head>
+</head>-->
 <body>            
 	<div id="intro">
 		<ul>
@@ -38,7 +38,7 @@ title: Personal Resume
 <li>Wrote SQL scripts for quering and deleting records in active deployment</li>
 <li>Worked with clients on new web pages to customize while keeping with current county standards</li>
 <li>Rewote multiiple applications with custom user controls so they had consistancy and better user interface</li>
-<ul>
+</ul>
 <h3>Account Specialist</h3>
 <p class="job-title">DJA Financial Aid Services, Wichita, KS September 2011-Present</p>
 <ul>
