--- a/index.html
+++ b/index.html
@@ -7,121 +7,45 @@ title: Personal Resume
 
 <html>
 <head>
-<title> Resume Page </title>
+<title> Home </title>
 <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>-->
 <body>            
-	<div id="intro">
-		<ul>
-		<li>Tonya A. Riepe</li>	
-		<li>tonya.riepe@gmail.com</li>
-		</ul>
-	</div>
-	<div id="resume-content">
-<h2>Objective:</h2> 
-<p>To gain an entry level position in software development, utilizing my professional skills & education. 
-	To grow professionally while contributing to your efficiency and success.</p>
+	
+    <h1>Life has been a bit weird over the last year. My website it under extreme maintenance. But for now, here are some coding resources for you.</h1>
+    <h2>Educational Coding Website</h2>
 
-<h2>Summary of Qualifications</h2>
-<p>I have a passionate ability to understand new software and how it works, and how users can effectively interact with it.
-	I have used this job skill in the past to develop training manuals and offer training to new & existing employees, 
-	even when not part of my official job description.
-	I am now completing my education to ensure that software development is my primary occupational focus.
-</p>
-<h1>WORK HISTORY</h1>
-		<h3>Senior Web Developer</h3>
-<p class="job-title">Februrary 2016-Present</p>
+<p>Many parents get overwhelmed with the thought of helping their kids learn how to code, luckily, 
+        there are many sites out there now that make it easy and fun for kids (and parents) to learn to code. 
+        Don’t be fooled into thinking that these games don’t teach programming. 
+        The style of most of these sites is called Drag and Drop, but what it does is help your 
+        child understand how to talk to computers and think like a programmer. Here is a rundown of those sites.</p> 
 <ul>
-<li>Update legacy code in existing ASP.NET applications using C#, HTML, CSS, Javascript, and SQL</li>
-<li>Maintain County website and update any verbiage or documentation as needed</li>
-<li>Deployed applications on multiple services and updated spooling as needed</li>
-<li>Wrote SQL scripts for quering and deleting records in active deployment</li>
-<li>Worked with clients on new web pages to customize while keeping with current county standards</li>
-<li>Rewote multiiple applications with custom user controls so they had consistancy and better user interface</li>
-</ul>
-<h3>Account Specialist</h3>
-<p class="job-title">DJA Financial Aid Services, Wichita, KS September 2011-Present</p>
+
+<li>https://hourofcode.com/us/learn This is by far the most popular site and even works with teachers to help bring coding to the classroom. It has a filter at the top that starts with Pre-Reader and goes to grades 9+. An excellent, first resource.</li>
+
+<li>https://www.tynker.com/hour-of-code/ Very similar to above but don’t let the name fool you into thinking that they are the same. They have free games but also have paid courses for multiple ages. If your child has gotten bored with the above, this is will give them more options.</li> 
+
+<li>https://codecombat.com/play Does your child like RPGs AND want to learn to code. If they have played a couple of games from the sites above, this will be a fun, new challenge for them. Starting with the basics, your child will have to navigate dungeons and fight monsters thinking like a programmer and using code blocks.</li> 
+
+<li>https://scratch.mit.edu/ Created by developers at MIT, they will be able to build custom games and videos. There is a learning curve to this, but with the help of Youtube, your child will be on their way to making their own games in no time.</li> 
+
+<li>https://app.codemonkey.com/ This is not my favorite out of the bunch, but it is cute for few plays and I have never actually had my trial expire on me. Similar to Hour of Code, just not as wide a variety of games.</li>
+
+<li>http://www.crunchzilla.com/code-monster this one is pure Javascript, (meaning, no pre-made code blocks) so this is best for older kids who are wanting to try their hand using a programming language but saves you the headache of setting up what is called a developer environment.</li>
+    </ul>
+<p>If all of the above have been exhausted, here is a list of online courses for learning specific programming languages. Best suited for older students and adults, most of these will require you to set up a developer environment. Don’t worry, usually each video will teach you how to do that. </p>
 <ul>
-<li>Experience and training with multiple computer software programs, including, but not limited to, 
-SchoolDocs, Campus Vue, EdExpress, and Edconnect
-</li>
-<li>Created detailed training manuals after every software upgrade and change to procedures
-</li>
-<li>Sat in on software meetings to help convey departments needs and possible conflicts of procedures
-</li>
-<li>Took point on new projects to help pinpoint best way to get information from clients and import into 
-new software
-</li>
-<li>Extensive knowledge of Microsoft Word, Outlook, and Excel
-</li>
-<li>High level of attention to detail required to review that all required information was being received on 
-input forms and streamlined process on how to communicate back to clients
-</li>
+<li>https://www.codecademy.com/ Don’t get fooled into thinking you have to sign up for the pro plan, they have free courses and all are done in your web browser. No environment set up required.</li>
+<li>https://www.khanacademy.org/ Just like Code Academy, most of these have the programming built into your web browser. Perk, you can make a parent account and monitor your child’s progress with Khan Academy.</li>
+
+<li>https://www.udemy.com/ Though a lot of the courses have a cost, they do have a filter for Free Courses that you can utilize.</li>
+
+<li>https://www.coursera.org/ Almost all courses have an “Audit Course” option that lets you do the course absolutely free. You get access to all the videos in the course that way and can even take the quizzes and submit assignments.</li>
+
+<li>http://jsforcats.com/ This is just a fun thing!! You can do it all within the console of your browser (They will show you how) and you get to learn some basic Javascript, with CATS!!</li>
+
 </ul>
-<h3>Billing and Insurance</h3>
 
-<p class="job-title">Center for Women's Health, Wichita, KS September 2005-May 2008</p>
-<ul>  
-<li>Answered multi-line phone system and directed call
-</li>
-<li>Pulled and organized patient's medical charts for upcoming appointments
-</li>
-<li>Managed sensitive patient information such as test results, office visit information, and 
-insurance information
-</li>
-<li>Attended meetings to best implement moving from paper to electronic medical records
-</li>
-<li>Attended webinars on all new procedures and drugs
-</li>
-<li>Became main biller to learn new billing software and train other billers in the use of the new software
-</li>
-<li>Became main contact for software Company for billing department to discuss needs or address software 
-issues that arose
-</li>
-<li>Was onsite go to for technical problems and set up of new computers or copiers. Main contact for 
-contracted I.T. personal to call when needed when more in depth problems arose
-</li>
-</ul>
-<h3>Catalog Specialist</h3>
-<p class="job-title">Ameripride Uniform Company, Wichita, KS August 2004-September 2005</p> 
-<ul>
-<li>Answered multi-line phone
-</li>
-<li>Updated clients records for uniform changes 
-</li>
-<li>Scanned and set up client logos. Sometimes required converting and editing digital images.
-</li>
-</ul>
-<div id="higher">
-<div id="education">
-<h2>EDUCATION</h2>
-<p class="school">Butler Community College August 2014-Present</p>
-Associates in Applied Science for Software Development   
-12 credit hours completed 
-<p class="school">Aberdeen Proving Grounds April 2002 to July 2002</p>
-US Military 63W Training, Aberdeen, MD
-Military base training on vehicle repair
-
-<p class="school">Salina South High August 1997 to May 2001</p>
-High School Diploma, Salina, KS
-</div>
-<div id="extra">"
-<h3>Courses and additional Workshops</h3>
-BCC-Introduction to Visual Basic.Net, Information Technology Concepts, HMTL and CSS
-Ad Astra Academy- HTML & CSS 1 and 2
-
-<h3>Special interest groups</h3>
-Vice President of the Air Capital Skeptics<br>
-Active member of MakeICT<br>
-Slack member of DevICT and Labor Party
-</div>
-</div>
-<div id="footer">
-<h4>REFERENCES</h4>
-
-Available upon request
-<p><a href="index.aspx">Back to Index </a></p>
-</div>
-</div>
 </body>
 </html>
