Nav bar testing

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ title: Educational Resources
 </head>-->
 <body>            
 	
-    <h1>Life has been a bit weird over the last year. My website it under extreme maintenance. But for now, here are some coding resources for you.</h1>
+    <h1>Test</h1>
     <h2>Educational Coding Website</h2>
 
 <p>Many parents get overwhelmed with the thought of helping their kids learn how to code, luckily, 
