--- a/resume.html
+++ b/resume.html
@@ -11,116 +11,127 @@ title: Personal Resume
 <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>-->
 <body>            
-	<div id="intro">
+<div id="intro">
 		<ul>
-		<li>Tonya A. Riepe</li>	
+		<li>Tonya A. Riepe</li>		
 		<li>tonya.riepe@gmail.com</li>
 		</ul>
 	</div>
 	<div id="resume-content">
-<h2>Objective:</h2> 
-<p>To gain an entry level position in software development, utilizing my professional skills & education. 
-	To grow professionally while contributing to your efficiency and success.</p>
+<h2>Summary</h2> 
+<p>I am an enterprising and ambitious software/web developer, with a passion for understanding and learning new software, 
+	and studying user experience. With this skill, I have developed training manuals and trained new and existing employees. 
+	I am in pursuit of educational opportunities to ensure that development is my primary occupational focus. My goal is to work in a development and technical role on a variety of projects. 
+	I am also able to use that technical knowledge to network and promote product growth with potential clients and the community.</p>
 
-<h2>Summary of Qualifications</h2>
-<p>I have a passionate ability to understand new software and how it works, and how users can effectively interact with it.
-	I have used this job skill in the past to develop training manuals and offer training to new & existing employees, 
-	even when not part of my official job description.
-	I am now completing my education to ensure that software development is my primary occupational focus.
-</p>
-<h1>WORK HISTORY</h1>
-		<h3>Senior Web Developer</h3>
-<p class="job-title">Februrary 2016-Present</p>
+<h2>HISTORY</h2>
+<h3>Software Developer</h3>
+<p class="job-title">Oct 2017 - Present, Ennovar Software</p>
+
 <ul>
-<li>Update legacy code in existing ASP.NET applications using C#, HTML, CSS, Javascript, and SQL</li>
-<li>Maintain County website and update any verbiage or documentation as needed</li>
-<li>Deployed applications on multiple services and updated spooling as needed</li>
-<li>Wrote SQL scripts for quering and deleting records in active deployment</li>
+    <li>Worked on updating existing software to expand the use and add new features</li>
+    <li>Helped develop structured training for incoming developers</li>
+    <li>Started doing Product Evangelism by attending seminars, training, and networking events</li>
+    <li>Created and gave presentations to spread the Ennovar brand</li>
+    <li>Met with past clients to see where improvements to Ennovar policies could be made</li>
+    <li>Helped create better workflow for the internal teams and to cut down project time</li>
+    <li>Set up a series of "classes" for new developers to go over scope creep, client requirements, and working on a software team</li>
+    <li>Emailed and set up meetings with potential clients to see what their software needs were and how Ennovar could solve their software problems</li>
+</ul>
+
+
+<h3>Educator Tinker-Tech Camp</h3>
+<p class="job-title">May 2017 - Nov 2017, Exploration Place</p>
+<p>Create lesson plans for children, ages 10 - 14, and teach hands-on projects that integrate basic coding ideas, 
+    while adding fun elements to hold the kids’ attention and entertain.</p>
+    <ul> 
+<li>Taught basic Python functions and principles for use with Raspberry Pi</li>
+<li>Did introductory circuit building and working with breadboards and LEDs and Arduinos</li>
+<li>Taught introductory C++ skills for creating loops and methods with the Arduinos</li>
+<li>Went over basic JavaScript variable assignments and making text based games with JavaScript</li>
+<li>Utilized MIT App Inventor 2 with the students to make their own basic apps such as random number generators and Magic 8-Ball effects</li>
+<li>Drone simulation training, building, and flying along with pre-programming</li>
+<li>Construction of SeaPerch ROVs, including wiring, soldering, and testing</li>
+<li>Taught 3D software applications, including Inkscape and Tinkercad and the use of 3D equipment</li>
+    </ul>
+
+    <h3>Freelance Consultant</h3>
+<p class="job-title">March 2017 - Present, Midwest Nerd Chick</p>
+<ul>
+    <li>Took on multiple small projects to help with personal growth</li>
+    <li>Did wedding planning including all meetings with all vendors, fittings, and small tasks for bride and groom</li>
+    <li>Began networking in the community to get a feeling what Wichita needs for technology</li>
+</ul>
+<h3>Senior Web Developer</h3>
+<p class="job-title">February 2016-March 2017, Sedgwick County></p>
+<ul>
+<li>Update legacy code in existing ASP.NET applications using C#, HTML, CSS, JavaScript, and SQL</li>
+<li>Maintain Sedgwick County website and update any verbiage or documentation as needed</li>
+<li>Deployed applications on multiple servers and updated spooling as needed</li>
+<li>Wrote SQL scripts for querying and deleting records in active deployment</li>
 <li>Worked with clients on new web pages to customize while keeping with current county standards</li>
-<li>Rewote multiiple applications with custom user controls so they had consistancy and better user interface</li>
+<li>Rewrote multiple applications with custom user controls so they had consistency and better user interface</li>
 </ul>
+
+<h3>Billing Specialist</h3>
+<p class="job-title">September 2014-February 2016, Optometric Billing Solutions, Wichita, KS</p>
+<ul>
+<li>Utilized a variety of billing software (depending on the need of each client) in a limited amount of time</li>
+<li>Deployed LogMeIn, Remote desktop sessions, and Screen Shares to access client hardware</li>
+<li>Created, updated, and maintained billing manual using OneNote for use by all employees</li>
+<li>Utilized expert and extensive knowledge of Microsoft Word, Outlook, and Excel</li>
+<li>Maintained a high level of attention to detail</li>
+<li>Took on new clients and “scrubbed them” so they could be assigned a permanent</li>
+</ul>
+
 <h3>Account Specialist</h3>
-<p class="job-title">DJA Financial Aid Services, Wichita, KS September 2011-Present</p>
+<p class="job-title">September 2011 – September 2014, DJA Financial Aid Services, Wichita, KS</p>
 <ul>
-<li>Experience and training with multiple computer software programs, including, but not limited to, 
-SchoolDocs, Campus Vue, EdExpress, and Edconnect
-</li>
-<li>Created detailed training manuals after every software upgrade and change to procedures
-</li>
-<li>Sat in on software meetings to help convey departments needs and possible conflicts of procedures
-</li>
-<li>Took point on new projects to help pinpoint best way to get information from clients and import into 
-new software
-</li>
-<li>Extensive knowledge of Microsoft Word, Outlook, and Excel
-</li>
-<li>High level of attention to detail required to review that all required information was being received on 
-input forms and streamlined process on how to communicate back to clients
-</li>
+<li>Experience and training with multiple computer software programs, including, but not limited to, SchoolDocs, Campus Vue, EdExpress, and EdConnect</li>
+<li>Created detailed training manuals after every software upgrade and change to procedures</li>
+<li>Participated in software meetings to help convey departments needs and possible conflicts of procedures</li>
+<li>Took the lead on new projects to help pinpoint the most effective way to collect information from clients and import into new software</li>
+<li>Expert and extensive knowledge of Microsoft Word, Outlook, and Excel</li>
+<li>Ability to maintain a high level of attention to detail. Reviewed all required information received on input forms, plus streamlined process on how to communicate with clients</li>
 </ul>
-<h3>Billing and Insurance</h3>
+<h3>Billing and Insurance Specialist</h3>
+<p class="job-title">09/05 – 05/08, Center for Women's Health, Wichita, KS</p>
+<ul>
+<li>Earned position as main biller, learning new billing software and training other billers for proficiency</li>
+<li>Attended meetings to best implement moving from paper to electronic medical records</li>
+<li>Attended webinars on all new procedures and drugs</li>
+<li>Became the liaison to the external software company utilized by the company’s billing department to address needs, software issues or requests</li>
+<li>On-site lead for technical problems and setup of all office technical equipment, including computers and copiers</li>
+<li>Work with IT team on larger computer or tech issues</li>
+<li>Answered multi-line phone system and directed calls</li>
+<li>Pulled and organized patients’ medical charts for upcoming appointments</li>
+<li>Managed sensitive patient information such as test results, office visit information, and insurance information</li>
+</ul>
 
-<p class="job-title">Center for Women's Health, Wichita, KS September 2005-May 2008</p>
-<ul>  
-<li>Answered multi-line phone system and directed call
-</li>
-<li>Pulled and organized patient's medical charts for upcoming appointments
-</li>
-<li>Managed sensitive patient information such as test results, office visit information, and 
-insurance information
-</li>
-<li>Attended meetings to best implement moving from paper to electronic medical records
-</li>
-<li>Attended webinars on all new procedures and drugs
-</li>
-<li>Became main biller to learn new billing software and train other billers in the use of the new software
-</li>
-<li>Became main contact for software Company for billing department to discuss needs or address software 
-issues that arose
-</li>
-<li>Was onsite go to for technical problems and set up of new computers or copiers. Main contact for 
-contracted I.T. personal to call when needed when more in depth problems arose
-</li>
-</ul>
-<h3>Catalog Specialist</h3>
-<p class="job-title">Ameripride Uniform Company, Wichita, KS August 2004-September 2005</p> 
-<ul>
-<li>Answered multi-line phone
-</li>
-<li>Updated clients records for uniform changes 
-</li>
-<li>Scanned and set up client logos. Sometimes required converting and editing digital images.
-</li>
-</ul>
-<div id="higher">
-<div id="education">
+
 <h2>EDUCATION</h2>
-<p class="school">Butler Community College August 2014-Present</p>
-Associates in Applied Science for Software Development   
-12 credit hours completed 
-<p class="school">Aberdeen Proving Grounds April 2002 to July 2002</p>
-US Military 63W Training, Aberdeen, MD
-Military base training on vehicle repair
 
-<p class="school">Salina South High August 1997 to May 2001</p>
-High School Diploma, Salina, KS
-</div>
-<div id="extra">"
-<h3>Courses and additional Workshops</h3>
-BCC-Introduction to Visual Basic.Net, Information Technology Concepts, HMTL and CSS
-Ad Astra Academy- HTML & CSS 1 and 2
+<p class="school">Butler Community College August 2014 - Present</p>
+<p>Associates in Applied Science for Software Development</br>
+15 credit hours completed, projected graduation May 2018</p>
+
+
+<h3>Courses and additional workshops</h3>
+<p>BCC-Introduction to Visual Basic.Net, Information Technology Concepts, HTML and CSS, T-SQL, C#, Windows Administrator server, XML</br>
+Ad Astra Academy- HTML & CSS 1 and 2, JavaScript 1 and 2 with JQuery, Version control with Git</p>
 
 <h3>Special interest groups</h3>
-Vice President of the Air Capital Skeptics<br>
-Active member of MakeICT<br>
-Slack member of DevICT and Labor Party
-</div>
-</div>
-<div id="footer">
-<h4>REFERENCES</h4>
+<p>Active member of MakeICT</br>
+Slack member of DevICT and Labor Party</p>
+<p>The Hive</p>
+<p>Wichita Business Journal Career Women 2018</p>
 
-Available upon request
-<p><a href="index.aspx">Back to Index </a></p>
+
+<div id="footer">
+<h3>REFERENCES</h3>
+
+<p>Available upon request</p>
+
 </div>
 </div>
 </body>
