Added bootstrap and resource page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 ---
 layout: default
-title: Educational Resources
+title: Home
 ---
-<!--<DOCTYPE html>
-
-
-<html>
-<head>
-<title> Home </title>
-<link rel="stylesheet" type="text/css" href="css/mystyle.css">
-</head>-->
 <body>            
 	
     <h1>Life has been a bit weird over the last year. My website it under extreme maintenance. But for now, here are some coding resources for you.</h1>
@@ -48,4 +40,4 @@ title: Educational Resources
 </ul>
 
 </body>
-</html>
+
