--- a/resources.html
+++ b/resources.html
@@ -1,18 +1,10 @@
 ---
 layout: default
-title: About
+title: Educational Resources
 ---
-<!--<DOCTYPE html>
-
-
-<html>
-<head>
-<title> Home </title>
-<link rel="stylesheet" type="text/css" href="css/mystyle.css">
-</head>-->
 <body>            
 	
-    <h1>Test</h1>
+    <h1>Life has been a bit weird over the last year. My website it under extreme maintenance. But for now, here are some coding resources for you.</h1>
     <h2>Educational Coding Website</h2>
 
 <p>Many parents get overwhelmed with the thought of helping their kids learn how to code, luckily, 
@@ -48,4 +40,3 @@ title: About
 </ul>
 
 </body>
-</html>
