Each page has been updated

--- a/about.html
+++ b/about.html
@@ -10,42 +10,12 @@ title: About
 <title> Home </title>
 <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>-->
-<body>            
-	
-    <h1>Test</h1>
-    <h2>Educational Coding Website</h2>
+<body>
 
-<p>Many parents get overwhelmed with the thought of helping their kids learn how to code, luckily, 
-        there are many sites out there now that make it easy and fun for kids (and parents) to learn to code. 
-        Don’t be fooled into thinking that these games don’t teach programming. 
-        The style of most of these sites is called Drag and Drop, but what it does is help your 
-        child understand how to talk to computers and think like a programmer. Here is a rundown of those sites.</p> 
-<ul>
+<p>I have a passion for connecting people with the things that make them happy. It’s the reasons I have started this project and 
+    have made it my mission to help others. Because my life hasn’t been easy and I have had a chance to do so much, I want to share those 
+    struggles and what I have learned with the people around me. 
+    I can be an emotional person, though my friends tell me it’s because I care too much.</p> 
 
-<li>https://hourofcode.com/us/learn This is by far the most popular site and even works with teachers to help bring coding to the classroom. It has a filter at the top that starts with Pre-Reader and goes to grades 9+. An excellent, first resource.</li>
-
-<li>https://www.tynker.com/hour-of-code/ Very similar to above but don’t let the name fool you into thinking that they are the same. They have free games but also have paid courses for multiple ages. If your child has gotten bored with the above, this is will give them more options.</li> 
-
-<li>https://codecombat.com/play Does your child like RPGs AND want to learn to code. If they have played a couple of games from the sites above, this will be a fun, new challenge for them. Starting with the basics, your child will have to navigate dungeons and fight monsters thinking like a programmer and using code blocks.</li> 
-
-<li>https://scratch.mit.edu/ Created by developers at MIT, they will be able to build custom games and videos. There is a learning curve to this, but with the help of Youtube, your child will be on their way to making their own games in no time.</li> 
-
-<li>https://app.codemonkey.com/ This is not my favorite out of the bunch, but it is cute for few plays and I have never actually had my trial expire on me. Similar to Hour of Code, just not as wide a variety of games.</li>
-
-<li>http://www.crunchzilla.com/code-monster this one is pure Javascript, (meaning, no pre-made code blocks) so this is best for older kids who are wanting to try their hand using a programming language but saves you the headache of setting up what is called a developer environment.</li>
-    </ul>
-<p>If all of the above have been exhausted, here is a list of online courses for learning specific programming languages. Best suited for older students and adults, most of these will require you to set up a developer environment. Don’t worry, usually each video will teach you how to do that. </p>
-<ul>
-<li>https://www.codecademy.com/ Don’t get fooled into thinking you have to sign up for the pro plan, they have free courses and all are done in your web browser. No environment set up required.</li>
-<li>https://www.khanacademy.org/ Just like Code Academy, most of these have the programming built into your web browser. Perk, you can make a parent account and monitor your child’s progress with Khan Academy.</li>
-
-<li>https://www.udemy.com/ Though a lot of the courses have a cost, they do have a filter for Free Courses that you can utilize.</li>
-
-<li>https://www.coursera.org/ Almost all courses have an “Audit Course” option that lets you do the course absolutely free. You get access to all the videos in the course that way and can even take the quizzes and submit assignments.</li>
-
-<li>http://jsforcats.com/ This is just a fun thing!! You can do it all within the console of your browser (They will show you how) and you get to learn some basic Javascript, with CATS!!</li>
-
-</ul>
 
 </body>
-</html>
