Updating to reflect future changes.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@ title: Home
 <p>The last year has been extremely difficult for myself and my family. A lot of things were lost, including all the data for my site. I am currently in the process of starting over.
     I still want to make sure the resources I have put together are available for those that need it. If you have any questions, please feel free to email me at the email at the bottom of the page. Thank you.</p>
 
-    <h2>Creating a real impact in your community</h2>
+    <h2>Where am I</h2>
 
-<p>For whatever conviction you have, if you do nothing with it, it has no purpose. You can be mad at the world, mad at current politics, 
-    or mad at people, but if you are unwilling to bring yourself to actually act in a positive way, nothing will change. I know this as I have all too often 
-    been angry. If you read through my old blogs, you will see that theme. And about 6 months ago,</p>
+<p>Did you meet me at Start Up Week? Are you wondering why a developer has such a sad page?!?! I am wondering the same thing, but when I went to StartUp week, I had no idea
+    it would be inspiring me to really restart Midwest Nerd Chick. I am currently working on a much prettier site and reflects what I am working on, but for now, 
+    this basic HTML page is what I got." 
 
-    <p>My goal as the Midwest Nerd Chick is to provide a place for STEAM passionate people to share their events, 
-        businesses, community outreach opportunities, and non-profits to the City of Wichita. All while sharing what it is like 
-        to be one of those people myself and the struggles that led me here and what I am currently facing. This isn’t going to be a place of hate or 
-        rage, well hopefully not TOO much at least, but a place that you can go to when you are mad. That when you are so mad that you feel like there is no 
-        hope for humanity, come here and find that hope. Find that group, that business that needs your anger, turned to energy, to help them make that positive change you are so angry to 
-        see. I hope I can help inspire you in one way or another to go out and make a change.</p>
+    <p>A Software Product Owner who has decided to help businesses, groups, and non-profits understand how to accommodate employees with disabilities, 
+        both physical and mental, how to talk to employees who are part of the LGBTQIA+ 
+        community, and how to make the work environment open and friendly to all religions.</p> 
+
+<p?The Alphabet Project is here to make sure that everyone has a spot at the table in your organization. Not only will it help 
+       improves employee retention, but it will also help employees really enjoy where they are, which will improve their overall performance. 
+       I know many of you are wanting to add this to your company culture, but it gets put on the back burner, time and time again. 
+       This is how I help and be that liaison and guide so you can say all members of the alphabet have a place in your organization.</p> 
+
+<p>With 39 years of mental disabilities, 10 years as a non-christian, 8 years being part of the rainbow community, and 6 years with a 
+    physical disability, I have been at so many jobs that I loved, but due to not feeling like I had a voice or that who I am or my 
+    struggles would be listened to, I left. This doesn't have to be and I hope I can help your organization learn to be open and inclusive.</p>
 
 </body>
 
