--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: Home
     <h2>Where am I</h2>
 
 <p>Did you meet me at Start Up Week? Are you wondering why a developer has such a sad page?!?! I am wondering the same thing, but when I went to StartUp week, I had no idea
-    it would be inspiring me to really restart Midwest Nerd Chick. I am currently working on a much prettier site and reflects what I am working on, but for now, 
-    this basic HTML page is what I got." 
+    it would be inspiring me to really restart Midwest Nerd Chick. I am currently working on a much prettier site that reflects what I am working on, but for now, 
+    this basic HTML page is what I got.</p>
 
     <p>A Software Product Owner who has decided to help businesses, groups, and non-profits understand how to accommodate employees with disabilities, 
         both physical and mental, how to talk to employees who are part of the LGBTQIA+ 
