--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: default
 title: Home
 ---
 <body>            
-<p>The last year has been extremely difficult for myself and my family. A lot of things were lost, including all the data for my site. I am currently in the process of starting over.
-    I still want to make sure the resources I have put together are available for those that need it. If you have any questions, please feel free to email me at the email at the bottom of the page. Thank you.</p>
+<p>The last 3 years have been extremely difficult for myself and my family. I left my career, my hobbies, my personal life, to take care of myself and my family. 
+    In that time,everything for my business and for my sites have been lost. I've lost connections and I really lost who I am and was before my life took a hit.
+    I am literally starting from scratch to put my life back together again and refind the passion and drive that is Midwest Nerd Chick. 
+    If you have any questions, please feel free to email me at the email at the bottom of the page. Thank you.</p>
 
     <h2>Where am I</h2>
 
