Proofreading is hard

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Home
 ---
 <body>            
-<p>The last 3 years have been extremely difficult for myself and my family. I left my career, my hobbies, my personal life, to take care of myself and my family. 
-    In that time,everything for my business and for my sites have been lost. I've lost connections and I really lost who I am and was before my life took a hit.
+<p>The last 3 years have been extremely difficult for myself and my family. I left my career, my hobbies, my personal life to take care of myself and my family. 
+    In that time everything site data to even remembering how to code has been lost. I've lost connections with dear and wonderful people I miss. I really lost who I am and was before my life took a hit.
     I am literally starting from scratch to put my life back together again and refind the passion and drive that is Midwest Nerd Chick. 
     If you have any questions, please feel free to email me at the email at the bottom of the page. Thank you.</p>
 
