--- a/thealphbetproject.html
+++ b/thealphbetproject.html
@@ -7,7 +7,7 @@ title: The Alphabet Project
 
 <html>
 <head>
-<title> Home </title>
+<title> The Alphabet Project </title>
 <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>-->
 <body>
