--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@ title: Personal Resume
 <body>            
 <div id="intro">
 		<ul>
-		<li>Tonya A. Riepe</li>		
-		<li>tonya.riepe@gmail.com</li>
+		<li>Shepard C. Prince</li>		
+		<li>shepardcprince@gmail.com</li>
 		</ul>
 	</div>
 	<div id="resume-content">
