Added new about and Product owner

--- a/resume.html
+++ b/resume.html
@@ -19,14 +19,28 @@ title: Personal Resume
 	</div>
 	<div id="resume-content">
 <h2>Summary</h2> 
-<p>I am an enterprising and ambitious software/web developer, with a passion for understanding and learning new software, 
-	and studying user experience. With this skill, I have developed training manuals and trained new and existing employees. 
-	I am in pursuit of educational opportunities to ensure that development is my primary occupational focus. My goal is to work in a development and technical role on a variety of projects. 
-	I am also able to use that technical knowledge to network and promote product growth with potential clients and the community.</p>
+<p>Passionate doesn't even come close to describe who I am and how I approach my work and my dreams. Discovering Agile and becoming a Product Owner echos who I already was
+	and how I approach life at all my previous jobs. Education and sharing knowledge has been the very backbone on wich Midwest Nerd Chick was founded.
+	I know how to drive forward, but I leave no one behind on my way, making sure that all voices are heard on I help guide companies forward for better inclusivity.
+	This passion, drive, and experience is my guide as I forward with this new oppurtnity to help Wichita. </p>
 
 <h2>HISTORY</h2>
-<h3>Software Developer</h3>
-<p class="job-title">Oct 2017 - Present, Ennovar Software</p>
+<h3>Agile Product Owner</h3>
+<p class="job-title">Jan 2019 - June 2019, Smash Dev Shop</p>
+
+<ul>
+    	<li>Acted as Stakeholder of specific product backlog items, worked closely with development teams to ensure the output was aligned with expectations</li>
+	<li>Was the voice of the Stakeholder, providing a business perspective on value during day-to-day development</li>
+	<li>Drove and owned backlog grooming and management, prioritize the iteration and acceptance testing and delivery of iteration</li>
+	<li>Prioritized work within an agile team and maintained a backlog of future work for consideration/prioritization</li>
+	<li>Provided week-to-week tactical objectives to Scrum team, and provided quick JIT decisions to system-level questions and defect triage</li>
+	<li>Took responsibility for the development of ongoing enhancements, created and ordered user stores with the agile teams</li>
+	<li>Worked directly with other product owners, system engineers, program managers, developers, testers, and customers to define features and technical user stories</li>
+	<li>Project responsibilities included development, testing, documentation, implementation, and maintenance</li>
+	<li>Mentored other developers, including peer-reviewing code and pair programming (shadowing)</li>
+</ul>
+<h3>Product Evangelist</h3>
+<p class="job-title">Oct 2017 - Aug 2018, Ennovar Software</p>
 
 <ul>
     <li>Worked on updating existing software to expand the use and add new features</li>
