Github does not have Grammerly

--- a/resume.html
+++ b/resume.html
@@ -19,10 +19,11 @@ title: Personal Resume
 	</div>
 	<div id="resume-content">
 <h2>Summary</h2> 
-<p>Passionate doesn't even come close to describe who I am and how I approach my work and my dreams. Discovering Agile and becoming a Product Owner echos who I already was
-	and how I approach life at all my previous jobs. Education and sharing knowledge has been the very backbone on wich Midwest Nerd Chick was founded.
-	I know how to drive forward, but I leave no one behind on my way, making sure that all voices are heard on I help guide companies forward for better inclusivity.
-	This passion, drive, and experience is my guide as I forward with this new oppurtnity to help Wichita. </p>
+<p>Passion doesn't even come close to describing who I am and how I approach my work and my dreams. Discovering Agile and becoming a Product Owner echos who I already was
+	and how I approach life at all my previous jobs. Education and sharing knowledge has been the very backbone of which Midwest Nerd Chick was founded.
+	I know how to drive forward, but I leave no one behind on my way, making sure that all voices are heard as I help guide companies forward for better inclusivity.
+	This passion, drive, and experience are my guides as I forward with this new opportunity to help Wichita.
+</p>
 
 <h2>HISTORY</h2>
 <h3>Agile Product Owner</h3>
@@ -43,12 +44,12 @@ title: Personal Resume
 <p class="job-title">Oct 2017 - Aug 2018, Ennovar Software</p>
 
 <ul>
-    <li>Worked on updating existing software to expand the use and add new features</li>
+    <li>Worked on updating existing software to expand its use and add new features</li>
     <li>Helped develop structured training for incoming developers</li>
     <li>Started doing Product Evangelism by attending seminars, training, and networking events</li>
     <li>Created and gave presentations to spread the Ennovar brand</li>
     <li>Met with past clients to see where improvements to Ennovar policies could be made</li>
-    <li>Helped create better workflow for the internal teams and to cut down project time</li>
+    <li>Helped create a better workflow for the internal teams and cut down project time</li>
     <li>Set up a series of "classes" for new developers to go over scope creep, client requirements, and working on a software team</li>
     <li>Emailed and set up meetings with potential clients to see what their software needs were and how Ennovar could solve their software problems</li>
 </ul>
@@ -57,16 +58,16 @@ title: Personal Resume
 <h3>Educator Tinker-Tech Camp</h3>
 <p class="job-title">May 2017 - Nov 2017, Exploration Place</p>
 <p>Create lesson plans for children, ages 10 - 14, and teach hands-on projects that integrate basic coding ideas, 
-    while adding fun elements to hold the kids’ attention and entertain.</p>
+    while adding fun elements to hold the kids’ attention and entertain them.</p>
     <ul> 
 <li>Taught basic Python functions and principles for use with Raspberry Pi</li>
 <li>Did introductory circuit building and working with breadboards and LEDs and Arduinos</li>
 <li>Taught introductory C++ skills for creating loops and methods with the Arduinos</li>
-<li>Went over basic JavaScript variable assignments and making text based games with JavaScript</li>
+<li>Went over basic JavaScript variable assignments and making text-based games with JavaScript</li>
 <li>Utilized MIT App Inventor 2 with the students to make their own basic apps such as random number generators and Magic 8-Ball effects</li>
 <li>Drone simulation training, building, and flying along with pre-programming</li>
 <li>Construction of SeaPerch ROVs, including wiring, soldering, and testing</li>
-<li>Taught 3D software applications, including Inkscape and Tinkercad and the use of 3D equipment</li>
+<li>Taught 3D software applications, including Inkscape and Tinkercad, and the use of 3D equipment</li>
     </ul>
 
     <h3>Freelance Consultant</h3>
@@ -74,7 +75,7 @@ title: Personal Resume
 <ul>
     <li>Took on multiple small projects to help with personal growth</li>
     <li>Did wedding planning including all meetings with all vendors, fittings, and small tasks for bride and groom</li>
-    <li>Began networking in the community to get a feeling what Wichita needs for technology</li>
+    <li>Began networking in the community to get a feeling of what Wichita needs for technology</li>
 </ul>
 <h3>Senior Web Developer</h3>
 <p class="job-title">February 2016-March 2017, Sedgwick County></p>
@@ -104,17 +105,17 @@ title: Personal Resume
 <li>Experience and training with multiple computer software programs, including, but not limited to, SchoolDocs, Campus Vue, EdExpress, and EdConnect</li>
 <li>Created detailed training manuals after every software upgrade and change to procedures</li>
 <li>Participated in software meetings to help convey departments needs and possible conflicts of procedures</li>
-<li>Took the lead on new projects to help pinpoint the most effective way to collect information from clients and import into new software</li>
+<li>Took the lead on new projects to help pinpoint the most effective way to collect information from clients and import it into new software</li>
 <li>Expert and extensive knowledge of Microsoft Word, Outlook, and Excel</li>
 <li>Ability to maintain a high level of attention to detail. Reviewed all required information received on input forms, plus streamlined process on how to communicate with clients</li>
 </ul>
 <h3>Billing and Insurance Specialist</h3>
 <p class="job-title">09/05 – 05/08, Center for Women's Health, Wichita, KS</p>
 <ul>
-<li>Earned position as main biller, learning new billing software and training other billers for proficiency</li>
+<li>Earned position as the main biller, learning new billing software and training other billers for proficiency</li>
 <li>Attended meetings to best implement moving from paper to electronic medical records</li>
 <li>Attended webinars on all new procedures and drugs</li>
-<li>Became the liaison to the external software company utilized by the company’s billing department to address needs, software issues or requests</li>
+<li>Became the liaison to the external software company utilized by the company’s billing department to address needs, software issues, or requests</li>
 <li>On-site lead for technical problems and setup of all office technical equipment, including computers and copiers</li>
 <li>Work with IT team on larger computer or tech issues</li>
 <li>Answered multi-line phone system and directed calls</li>
@@ -150,3 +151,6 @@ Slack member of DevICT and Labor Party</p>
 </div>
 </body>
 </html>
+
+
+
